fix index.js path, add Marco polo test

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'kotlin2js'
 
 compileKotlin2Js.kotlinOptions {
     moduleKind = "commonjs"
-    outputFile = "index.js"
+    outputFile = "node/index.js"
 }
 
 repositories {
